logs... logs everywhere

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "101": "^1.6.2",
     "bluebird": "^3.5.0",
     "commander": "^2.9.0",
+    "debug": "^2.6.3",
     "dockerode": "^2.4.1",
     "js-yaml": "^3.8.2"
   },
